syntax = "proto3"; 
import "Protos/version.proto";
import "Protos/timestamp.proto";

option csharp_namespace = "SwarmingFleet.Contracts";

package SwarmingFleet;
 
service ConnectionService {
    rpc Prelogin (NonceRequest) returns (NonceReply);
    rpc Login (LoginRequest) returns (LoginReply);
}

// 隨機碼請求
message NonceRequest {
    Version version = 1;
}

// 隨機碼回應
message NonceReply {
    // 隨機碼過期時間
    google.protobuf.Timestamp expiredTime = 1; 
    // 隨機碼
    bytes nonce = 2;
} 

// 登入請求 
message  LoginRequest {
    // 客戶端產生之隨機碼
    bytes nonce = 1;
    // 雜湊
    bytes hash = 2;
    // 裝置唯一簽章
    bytes signature = 3;
}
// 登入回應
message LoginReply {
    
    oneof response { 
        // 錯誤
        LoginErrors error = 1;
        // 權杖
        Token token = 2;
	} 
}
// 錯誤
enum LoginErrors { 
    // 未經授權的登入動作
    unauthorized = 0;
    // 重複登入
    repeatedLogon = 4;
}

// 權杖
message Token {
    // 過期時間
    google.protobuf.Timestamp expiredTime = 1; 
    // 權杖實體
    bytes instance = 2;
} 

